# hse-spb-2023-heroes

./: README.md
client/: CMakeLists.txt
client/include/: animation.hpp  board.hpp  caption.hpp  cell.hpp  client.hpp  cursor.hpp  enum_classes_fwd.hpp  game.hpp  game_menu_bar.hpp  menu.hpp  menu_button.hpp  resource_manager.hpp  spell.hpp  state_machine.hpp  textbox.hpp  unit.hpp  window.hpp
client/src/: animation.cpp  board.cpp  button.cpp  caption.cpp  cell.cpp  client.cpp  cursor.cpp  event_manager.cpp  game.cpp  game_menu_bar.cpp  main.cpp  menu.cpp  menu_button.cpp  popup_window.cpp  resource_manager.cpp  spell.cpp  textbox.cpp  unit.cpp  window.cpp
proto/all_protos/: demo.proto
server/: CMakeLists.txt
server/game_bot/: evaluator.h  game_bot.cpp  game_bot.hpp
server/model/const_game_info/: spell_list.hpp  units.json
server/model/include/: board.hpp  cell.hpp  game.hpp  player.hpp  unit.hpp
server/model/src/: board.cpp  game.cpp  player.cpp  unit.cpp
server/network/include/: db_interface.hpp  game_session.hpp  server.hpp
server/src/: game_session.cpp  main.cpp  server.cpp
